@@ -66,4 +66,31 @@ public interface Foo {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description>bug #1002 False +: FinalFieldCouldBeStatic on inner class</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+package net.sourceforge.pmd;
+
+public class FinalFieldCouldBeStaticTest {
+
+    public void foo() {
+        final Test t = new Test() {
+            // the rule was triggered for "foo" - which could be indeed a final static String constant
+            private final byte[] b = "foo".getBytes();
+
+            @Override
+            public byte[] bar() {
+                return b;
+            }
+        };
+        t.bar();
+    }
+}
+
+interface Test {
+    byte[] bar();
+}
+        ]]></code>
+    </test-code>
 </test-data>
